[package]
name = "debridge_openapi"
version = "1.0.0"
authors = ["deBridge team", "OpenAPI Generator team and contributors"]
description = "A turnkey solution for a high-performance cross-chain trading"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "multipart",
] }
